NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/CONTAINER_Commissionig__c.object-meta.xml
<CustomObject>
    <description>Custom container commissioning object</description>
    <label>Commissioning</label>
    <nameField>
        <label>Commissioning Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commissionings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>