NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/Acknowledge_By__c.field-meta.xml
<CustomField>
    <fullName>Acknowledge_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acknowledge By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Commissionings1</relationshipName>
    <type>Lookup</type>
</CustomField>