NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/CONTAINER_Account__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Custom field for commissioning object</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commissionings</relationshipLabel>
    <relationshipName>Commissionings</relationshipName>
    <type>Lookup</type>
</CustomField>