NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/CONTAINER_Account_Region__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Account_Region__c</fullName>
    <description>Custom field for the commissioning object</description>
    <label>Account Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>APO</fullName>
            </value>
            <value>
                <fullName>NAO</fullName>
            </value>
            <value>
                <fullName>SNAO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>