NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/CONTAINER_Build_Location__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Build_Location__c</fullName>
    <description>Custom field for the commissioning object</description>
    <label>Build Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Singapore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>