NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/CONTAINER_Commisioning_Agent__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Commisioning_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Custom object for the commissioning object</description>
    <label>Commissioning Agent</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CONTAINER_Authorized_Service_Provider</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commissionings</relationshipLabel>
    <relationshipName>Commissionings4</relationshipName>
    <type>Lookup</type>
</CustomField>