NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/CONTAINER_Commisioning_Rate__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Commisioning_Rate__c</fullName>
    <formula>CONTAINER_Commisioning_Agent__r.CONTAINER_Commisioning_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commissioning Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>