NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/CONTAINER_Commisioning_Region__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Commisioning_Region__c</fullName>
    <description>Custom field for the commissioning object</description>
    <label>Commissioning Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Singapore</fullName>
            </value>
            <value>
                <fullName>Syracuse</fullName>
            </value>
            <value>
                <fullName>Rotterdam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>