NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/Container_Commissioning_Contact__c.field-meta.xml
<CustomField>
    <fullName>Container_Commissioning_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commissioning Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.CONTAINER_Commisioning_Agent__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Commissionings</relationshipLabel>
    <relationshipName>Commissionings</relationshipName>
    <type>Lookup</type>
</CustomField>