NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/CONTAINER_Commissioning_Details_Count__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Commissioning_Details_Count__c</fullName>
    <label>Commissioning Details Count</label>
    <summaryForeignKey>CONTAINER_Commissioning_Details__c.CONTAINER_Commissioning__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>