NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/CONTAINER_Commissioning_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Commissioning_Record_Name__c</fullName>
    <label>Job Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>