NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/CONTAINER_Commissioning_Revision__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Commissioning_Revision__c</fullName>
    <label>Revision</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>