NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/CONTAINER_Compressor__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Compressor__c</fullName>
    <description>Custom field for the commissioning object</description>
    <label>Compressor</label>
    <length>225</length>
    <type>Text</type>
</CustomField>