NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/CONTAINER_Contract_Issued__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Contract_Issued__c</fullName>
    <description>Custom field fir the commissioning object</description>
    <label>Contract Issued</label>
    <type>Date</type>
</CustomField>