NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/CONTAINER_CTD_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_CTD_Account_Name__c</fullName>
    <description>This field created to get the data from CONTAINER CTD Region metadata</description>
    <label>CTD Account Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>