NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/CONTAINER_CTD_Address__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_CTD_Address__c</fullName>
    <description>This field created to get the data from CONTAINER CTD Region metadata</description>
    <label>CTD Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>