NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/CONTAINER_Current_Logged_In_User__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Current_Logged_In_User__c</fullName>
    <formula>IF( Acknowledge_By__r.Id == $User.Id  , TRUE, FALSE)</formula>
    <label>Current Logged In User</label>
    <type>Checkbox</type>
</CustomField>