NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/CONTAINER_DocuSign_Date_Format__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_DocuSign_Date_Format__c</fullName>
    <description>Custom field for DocuSign date format(MM/DD/YYYY)</description>
    <formula>LPAD(TEXT(MONTH  (CONTAINER_Contract_Issued__c)),2,&quot;0&quot;)&amp;&quot;/&quot;&amp;LPAD(TEXT(DAY (CONTAINER_Contract_Issued__c)),2,&quot;0&quot;)&amp;&quot;/&quot;&amp;TEXT(YEAR(CONTAINER_Contract_Issued__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DocuSign Date Format</label>
    <type>Text</type>
</CustomField>