NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/CONTAINER_Dynamic_Options_from_ASO__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Dynamic_Options_from_ASO__c</fullName>
    <description>Custom field for commissioning object</description>
    <label>Dynamic Options from ASO</label>
    <length>225</length>
    <type>Text</type>
</CustomField>