NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/CONTAINER_Installation_Location_Box__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Installation_Location_Box__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>CONTAINER Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commissionings (Installation Location)</relationshipLabel>
    <relationshipName>Commissioning</relationshipName>
    <type>Lookup</type>
</CustomField>