NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/CONTAINER_Is_Commissioning_Child_Record__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Is_Commissioning_Child_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Process to check whether existing record is child or master.</description>
    <label>Is Commissioning Child Record</label>
    <type>Checkbox</type>
</CustomField>