NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/CONTAINER_Job_Quantity__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Job_Quantity__c</fullName>
    <description>Custom field for the Commission object</description>
    <label>Job Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>