NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/CONTAINER_Job_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Job_Start_Date__c</fullName>
    <description>Custom field for the commission object</description>
    <label>Job Start Date</label>
    <type>Date</type>
</CustomField>