NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/CONTAINER_Model_Number__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Model_Number__c</fullName>
    <description>Custom field for the commissioning object</description>
    <label>Model Number</label>
    <length>225</length>
    <type>Text</type>
</CustomField>