NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/CONTAINER_PID_Number__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_PID_Number__c</fullName>
    <description>Custom field for commissioning field</description>
    <label>PID Number</label>
    <length>225</length>
    <type>Text</type>
</CustomField>