NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/CONTAINER_Quantity_Shipped__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Quantity_Shipped__c</fullName>
    <label>Quantity Shipped</label>
    <summarizedField>CONTAINER_Commissioning_Details__c.CONTAINER_Quantity_Shipped__c</summarizedField>
    <summaryForeignKey>CONTAINER_Commissioning_Details__c.CONTAINER_Commissioning__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>