NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/CONTAINER_Regional_Service_Manager__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Regional_Service_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Service Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Commissionings</relationshipName>
    <type>Lookup</type>
</CustomField>