NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/CONTAINER_Revision__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Revision__c</fullName>
    <description>Custom field for the commissioning</description>
    <label>Revision</label>
    <length>225</length>
    <type>Text</type>
</CustomField>