NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/CONTAINER_Shipment_Completed__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Shipment_Completed__c</fullName>
    <description>Custom field for the commissioning</description>
    <label>Shipment Completed</label>
    <type>Date</type>
</CustomField>