NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/CONTAINER_Shipment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Shipment_Start_Date__c</fullName>
    <label>Shipment Start Date</label>
    <type>Date</type>
</CustomField>