NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/CONTAINER_Total_Job_Quantity__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Total_Job_Quantity__c</fullName>
    <description>Container specific Job quantity.</description>
    <label>Total Job Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>