NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/CONTAINER_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Total_Price__c</fullName>
    <formula>CONTAINER_Job_Quantity__c  *  CONTAINER_Commisioning_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>