NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/CONTAINER_Unit_Warranty__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Unit_Warranty__c</fullName>
    <description>Custom field for the commissioning object</description>
    <label>Unit Warranty</label>
    <length>225</length>
    <type>Text</type>
</CustomField>