NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/CONTAINER_WIP_Job_Quantity__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_WIP_Job_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>WIP total Job Quantity</description>
    <label>WIP Job Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>