NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/fields/CTD_Attention__c.field-meta.xml
<CustomField>
    <fullName>CTD_Attention__c</fullName>
    <description>This field created to get the data from CONTAINER CTD Region metadata</description>
    <label>CTD Attention</label>
    <length>225</length>
    <type>Text</type>
</CustomField>