NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/validationRules/CONTAINER_Account_Not_Editable_Child.validationRule-meta.xml
<ValidationRule>
    <fullName>CONTAINER_Account_Not_Editable_Child</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED( CONTAINER_Account__c ),
CONTAINER_Account__c  &lt;&gt;  CONTAINER_Commissioning__r.CONTAINER_Account__c,  
CONTAINER_Is_Commissioning_Child_Record__c = True,
NOT( $Permission.CONTAINER_Bypass_Validation_Rule )
)</errorConditionFormula>
    <errorDisplayField>CONTAINER_Account__c</errorDisplayField>
    <errorMessage>You cannot update the Account after creation.</errorMessage>
</ValidationRule>