NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/validationRules/CONTAINER_ChildComm_JobQty_Exceed.validationRule-meta.xml
<ValidationRule>
    <fullName>CONTAINER_ChildComm_JobQty_Exceed</fullName>
    <active>true</active>
    <description>CONTAINER_ChildComm_JobQty_Exceed</description>
    <errorConditionFormula>AND(
NOT($Permission.CONTAINER_Bypass_Validation_Rule ),
CONTAINER_Job_Quantity__c &gt; CONTAINER_Commissioning__r.CONTAINER_Job_Quantity__c ,
ISNEW()
)</errorConditionFormula>
    <errorMessage>Child commissioning job quantity cannot exceed parent commissioning total job quantity.</errorMessage>
</ValidationRule>