NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/validationRules/CONTAINER_Qty_Shipped_Exceed_Job_Qty.validationRule-meta.xml
<ValidationRule>
    <fullName>CONTAINER_Qty_Shipped_Exceed_Job_Qty</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT($Permission.CONTAINER_Bypass_Validation_Rule ),
 CONTAINER_Is_Commissioning_Child_Record__c,
 ISCHANGED(CONTAINER_Job_Quantity__c), 
 CONTAINER_Quantity_Shipped__c &gt; CONTAINER_Job_Quantity__c
)</errorConditionFormula>
    <errorMessage>Shipped quantity cannot exceed Job quantity.</errorMessage>
</ValidationRule>