NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/validationRules/CONTAINER_UpdateChildComm_JobQty_Exceed.validationRule-meta.xml
<ValidationRule>
    <fullName>CONTAINER_UpdateChildComm_JobQty_Exceed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Permission.CONTAINER_Bypass_Validation_Rule ),
ISCHANGED( CONTAINER_Job_Quantity__c ),
CONTAINER_Job_Quantity__c &gt; PRIORVALUE(CONTAINER_Job_Quantity__c),
(CONTAINER_Job_Quantity__c - PRIORVALUE(CONTAINER_Job_Quantity__c))&gt;CONTAINER_Commissioning__r.CONTAINER_Job_Quantity__c
)</errorConditionFormula>
    <errorMessage>Child commissioning job quantity cannot exceed parent commissioning total job quantity.</errorMessage>
</ValidationRule>