NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/listViews/Commissioning_Order_By_Not_Started.listView-meta.xml
<ListView>
    <fullName>Commissioning_Order_By_Not_Started</fullName>
    <columns>NAME</columns>
    <columns>CONTAINER_Contract_Issued__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTAINER_Commisioning_Status__c</field>
        <operation>equals</operation>
        <value>Not Started</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>2</value>
    </filters>
    <label>Commissioning Order By Not Started</label>
    <sharedTo>
        <role>Container_Service_Admin</role>
        <role>Container_Service_Product_Service_Engineering</role>
        <role>Container_Service_Technical_Publication</role>
        <role>Container_Service_Training</role>
        <roleAndSubordinatesInternal>Container_Sales</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Container_Service_FSM</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Container_Service_RSM</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Container_Service_Warranty_Administrator</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>