NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/listViews/CONTAINER_My_Commissioning_Order.listView-meta.xml
<ListView>
    <fullName>CONTAINER_My_Commissioning_Order</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTAINER_Current_Logged_In_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Commissioning Order</label>
    <sharedTo>
        <role>CONTAINER_External_Commissioning_Agent</role>
    </sharedTo>
</ListView>