NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/listViews/Parent_Commissioning_Records.listView-meta.xml
<ListView>
    <fullName>Parent_Commissioning_Records</fullName>
    <columns>NAME</columns>
    <columns>CONTAINER_Account__c</columns>
    <columns>CONTAINER_Total_Job_Quantity__c</columns>
    <columns>CONTAINER_Job_Quantity__c</columns>
    <columns>CONTAINER_Model_Number__c</columns>
    <columns>CONTAINER_Shipment_Start_Date__c</columns>
    <columns>CONTAINER_Shipment_Completed__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>Yim,Jessie,Oh</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>CO</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2024 12:00 AM</value>
    </filters>
    <label>Parent Commissioning Records</label>
</ListView>