NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissionig__c/listViews/SG_Comm_Completed.listView-meta.xml
<ListView>
    <fullName>SG_Comm_Completed</fullName>
    <columns>NAME</columns>
    <columns>CONTAINER_Account__c</columns>
    <columns>CONTAINER_Model_Number__c</columns>
    <columns>CONTAINER_Job_Quantity__c</columns>
    <columns>CONTAINER_Quantity_Shipped__c</columns>
    <columns>CONTAINER_Shipment_Start_Date__c</columns>
    <columns>CONTAINER_Commissioning_Details_Count__c</columns>
    <columns>CONTAINER_Special_Instructions__c</columns>
    <columns>Acknowledge_By__c</columns>
    <columns>CONTAINER_Commisioning_Status__c</columns>
    <columns>CONTAINER_Contract_Issued__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTAINER_Is_Commissioning_Child_Record__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CONTAINER_Commisioning_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>SG Comm - Completed</label>
</ListView>